2010-06-12  Colin Watson  <cjwatson@ubuntu.com>

	Avoid false positives in fs.lst, partmap.lst, and video.lst due to
	prototype declarations.

	* genmk.rb (PModule::rule): Define GRUB_LST_GENERATOR when
	generating fs, partmap, and video lists.
	* include/grub/fs.h (grub_fs_register): Omit prototype if
	GRUB_LST_GENERATOR is defined.
	* include/grub/partition.h (grub_partition_map_register): Likewise.
	* include/grub/video.h (grub_video_register): Likewise.

2010-06-12  Javier Martín <lordhabbit@gmail.com>

	* include/grub/types.h: Check for GRUB_CPU_SIZEOF_LONG when appropriate.

2010-06-12  Thomas Schmitt  <scdbackup@gmx.net>

	* util/grub-mkrescue.in: Support --xorriso argument.

2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Use -graft-points instead of -pathspecs.
	Suggested by: Thomas Schmitt.

2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Add --sort-weight arguments to xorriso.
	Suggested by: Thomas Schmitt.

2010-06-12  Vladimir Serbinenko  <phcoder@gmail.com>

	custom.cfg support.

	* conf/common.rmk (grub-mkconfig_SCRIPTS): Add 41_custom.
	* util/grub.d/41_custom.in: New file.

2010-06-12  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in (make_image): Remove sh module, which has
	been merged back into normal.

2010-06-11  Colin Watson  <cjwatson@ubuntu.com>

	* include/grub/efi/uga_draw.h (GRUB_EFI_UGA_GLT_MAX): Rename to ...
	(GRUB_EFI_UGA_BLT_MAX): ... this (typo fix).

2010-06-11  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (install-local): Include $(srcdir)/docs/man/$$dest.h2m
	when generating manual pages.
	* docs/man/grub-bin2h.h2m: New file.
	* docs/man/grub-editenv.h2m: New file.
	* docs/man/grub-fstest.h2m: New file.
	* docs/man/grub-install.h2m: New file.
	* docs/man/grub-macho2img.h2m: New file.
	* docs/man/grub-mkconfig.h2m: New file.
	* docs/man/grub-mkdevicemap.h2m: New file.
	* docs/man/grub-mkfont.h2m: New file.
	* docs/man/grub-mkimage.h2m: New file.