@@ -1,3 +1,7 @@
+2010-06-12  Thomas Schmitt  <scdbackup@gmx.net>
+
+	* util/grub-mkrescue.in: Pass unrecognized options to xorriso.
+
 2010-06-12  Colin Watson  <cjwatson@ubuntu.com>
 
 	Avoid false positives in fs.lst, partmap.lst, and video.lst due to
